HTML & CSS 강의 기록

--- a/HTML&CSS/practice/resume.html
+++ b/HTML&CSS/practice/resume.html
@@ -55,8 +55,8 @@
     </section>
 
     <div class="sns-wrap">
-      <a href="https://instagram.com/bingbong.___" target="_black"><img class="sns-img" src="instagram.png"></a>
-      <a href="https://github.com/Yoonkyoungme" target="_black"><img class="sns-img" src="github.png"></a>
+      <a href="https://instagram.com/bingbong.___" target="_black"><img class="sns-img" src="../img/instagram.png"></a>
+      <a href="https://github.com/Yoonkyoungme" target="_black"><img class="sns-img" src="../img/github.png"></a>
     </div>
   </div>
 
